@@ -62,6 +62,7 @@ Changes that introduce incompatibilities:
 * Fix entity:set_enabled(true) delayed while it blocks the hero (#817).
 * Fix brandished treasure sprite and shop treasure sprite not animated (#790).
 * movement:get/set_initial_angle() now use degrees (#721).
+* Add ability to hide mouse cursor (#891).
 
 Changes that do not introduce incompatibilities:
 
